# vev

./: .gitattributes  .gitignore  KVIST_REVISION  ODIN_NOTES.md  README.md  deps.edn
bench/: abi_native.kvist  c_abi.c  compare_abi.sh  compare_query_rules.sh  compare_query_rules_stress.sh  datascript_query_rules.clj  datascript_query_rules_stress.clj  datascript_read.kvist  indexes.kvist  musicbrainz_import_subset.kvist  musicbrainz_query_profile.kvist  query_rules.kvist  query_rules_stress.kvist  sqlite_storage.kvist  write_bench.kvist
clients/python/: README.md  pyproject.toml  smoke.py  vev.py  vevdb.py
docs/: architecture.md  benchmarks.md  c-abi.md  client-api.md  data-model.md  datascript-compat.md  datascript-test-matrix.md  datascript-test-port-ledger.md  datomic-syntax.md  design-principles.md  frontend-parity.md  getting-started.md  history.md  indexes.md  interop.md  maven-central.md  musicbrainz-query-matrix.md  musicbrainz.md  naming.md  next-steps.md  pull-model.md  query-model.md  roadmap.md  runtime-dependencies.md  scope.md  storage-architecture.md  storage.md  thesis.md  transactions.md  vev-codebase-improvements.md
include/: vev.h
scripts/: add_combined_jvm_artifacts.py  aggregates_tutorial_clojure.sh  aggregates_tutorial_kvist.sh  assemble_jvm_release.sh  build_c_abi.sh  build_cli.sh  build_native_library.sh  build_node_addon.sh  build_release.sh  build_sqlite.sh  check_release_environment.sh  check_self_contained_native.sh  combine_release_manifests.py  compare_aggregates_tutorial.clj  compare_aggregates_tutorial.sh  contact_book.sh  (+56 more)
(+116 files in other folders)
