[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vev"
version = "0.1.0"
description = "Python ctypes wrapper for Vev"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "EPL-2.0"}
authors = [
  {name = "Andreas Flakstad"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database"
]

[project.urls]
Homepage = "https://github.com/vevdb/vev"
Repository = "https://github.com/vevdb/vev"

[tool.setuptools]
py-modules = ["vev"]
